@@ -344,7 +344,7 @@ CONFIG_NETDEVICES=y
 # CONFIG_NET_DM90x0 is not set
 CONFIG_ENC28J60=y
 CONFIG_ENC28J60_NINTERFACES=1
-CONFIG_ENC28J60_SPIMODE=2
+CONFIG_ENC28J60_SPIMODE=0
 CONFIG_ENC28J60_FREQUENCY=20000000
 # CONFIG_ENC28J60_STATS is not set
 # CONFIG_ENC28J60_HALFDUPPLEX is not set
